terraform-provider-ciscoios/client/accesslist_parse.go
//line accesslist_parse.go.rl:1
package client

//line accesslist_parse.go:11
var _accesslist_eof_actions []byte = []byte{
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 9, 10, 9,
	9, 7, 7, 7, 9, 11, 12, 11,
	10, 9, 9, 7, 7, 7, 9, 13,
	13, 10, 9, 9, 7, 7, 7, 9,
	14, 15, 14, 9, 9, 7, 7, 7,
	9, 14, 14, 9, 9, 7, 7, 7,
	16,
}

const accesslist_start int = 1
const accesslist_first_final int = 645

const accesslist_en_main int = 1

//line accesslist_parse.go.rl:133

func (ale *AccessListEntry) Parse(data string) error {
	cs, p, pb, pe, eof := 0, 0, 0, len(data), len(data)

//line accesslist_parse.go:115
	{
		cs = accesslist_start
	}

//line accesslist_parse.go.rl:139

//line accesslist_parse.go:122
	{
		if p == pe {
			goto _test_eof
		}
		if cs == 0 {
			goto _out
		}
	_resume:
		switch cs {
		case 1:
			if data[p] == 97 {
				goto tr0
			}
			goto tr1
		case 0:
			goto _out
		case 2:
			if data[p] == 99 {
				goto tr2
			}
			goto tr1
		case 3:
			if data[p] == 99 {
				goto tr3
			}
			goto tr1
		case 4:
			if data[p] == 101 {
				goto tr4
			}
			goto tr1
		case 5:
			if data[p] == 115 {
				goto tr5
			}
			goto tr1
		case 6:
			if data[p] == 115 {
				goto tr6
			}
			goto tr1
		case 7:
			if data[p] == 45 {
				goto tr7
			}
			goto tr1
		case 8:
			if data[p] == 108 {
				goto tr8
			}
			goto tr1
		case 9:
			if data[p] == 105 {
				goto tr9
			}
			goto tr1
		case 10:
			if data[p] == 115 {
				goto tr10
			}
			goto tr1
		case 11:
			if data[p] == 116 {
				goto tr11
			}
			goto tr1
		case 12:
			if data[p] == 32 {
				goto tr12
			}
			goto tr1
		case 13:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr13
			}
			goto tr1
		case 14:
			if data[p] == 32 {
				goto tr14
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr15
			}
			goto tr1
		case 15:
			switch data[p] {
			case 100:
				goto tr16
			case 112:
				goto tr17
			case 114:
				goto tr18
			}
			goto tr1
		case 16:
			if data[p] == 101 {
				goto tr19
			}
			goto tr1
		case 17:
			if data[p] == 110 {
				goto tr20
			}
			goto tr1
		case 18:
			if data[p] == 121 {
				goto tr21
			}
			goto tr1
		case 19:
			if data[p] == 32 {
				goto tr22
			}
			goto tr1
		case 20:
			switch data[p] {
			case 32:
				goto tr23
			case 105:
				goto tr25
			case 116:
				goto tr26
			case 117:
				goto tr27
			}
			switch {
			case data[p] > 57:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr24
				}
			case data[p] >= 48:
				goto tr24
			}
			goto tr1
		case 21:
			if data[p] == 32 {
				goto tr28
			}
			switch {
			case data[p] > 57:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr29
				}
			case data[p] >= 48:
				goto tr29
			}
			goto tr1
		case 22:
			switch data[p] {
			case 97:
				goto tr31
			case 104:
				goto tr32
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr30
			}
			goto tr1
		case 23:
			if data[p] == 46 {
				goto tr33
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr34
			}
			goto tr1
		case 24:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr35
			}
			goto tr1
		case 25:
			if data[p] == 46 {
				goto tr36
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr37
			}
			goto tr1
		case 26:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr38
			}
			goto tr1
		case 27:
			if data[p] == 46 {
				goto tr39
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr40
			}
			goto tr1
		case 28:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr41
			}
			goto tr1
		case 29:
			if data[p] == 32 {
				goto tr42
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr43
			}
			goto tr1
		case 30:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr44
			}
			goto tr1
		case 31:
			if data[p] == 46 {
				goto tr45
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr46
			}
			goto tr1
		case 32:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr47
			}
			goto tr1
		case 33:
			if data[p] == 46 {
				goto tr48
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr49
			}
			goto tr1
		case 34:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr50
			}
			goto tr1
		case 35:
			if data[p] == 46 {
				goto tr51
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr52
			}
			goto tr1
		case 36:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr53
			}
			goto tr1
		case 37:
			if data[p] == 32 {
				goto tr54
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr55
			}
			goto tr1
		case 38:
			switch data[p] {
			case 97:
				goto tr57
			case 104:
				goto tr58
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr56
			}
			goto tr1
		case 39:
			if data[p] == 46 {
				goto tr59
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr60
			}
			goto tr1
		case 40:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr61
			}
			goto tr1
		case 41:
			if data[p] == 46 {
				goto tr62
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr63
			}
			goto tr1
		case 42:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr64
			}
			goto tr1
		case 43:
			if data[p] == 46 {
				goto tr65
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr66
			}
			goto tr1
		case 44:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr67
			}
			goto tr1
		case 45:
			if data[p] == 32 {
				goto tr68
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr69
			}
			goto tr1
		case 46:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr70
			}
			goto tr1
		case 47:
			if data[p] == 46 {
				goto tr71
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr72
			}
			goto tr1
		case 48:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr73
			}
			goto tr1
		case 49:
			if data[p] == 46 {
				goto tr74
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr75
			}
			goto tr1
		case 50:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr76
			}
			goto tr1
		case 51:
			if data[p] == 46 {
				goto tr77
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr78
			}
			goto tr1
		case 52:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr79
			}
			goto tr1
		case 645:
			if data[p] == 32 {
				goto tr679
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr680
			}
			goto tr1
		case 53:
			if data[p] == 108 {
				goto tr80
			}
			goto tr1
		case 54:
			if data[p] == 111 {
				goto tr81
			}
			goto tr1
		case 55:
			if data[p] == 103 {
				goto tr82
			}
			goto tr1
		case 646:
			goto tr1
		case 647:
			if data[p] == 32 {
				goto tr679
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr681
			}
			goto tr1
		case 648:
			if data[p] == 32 {
				goto tr679
			}
			goto tr1
		case 56:
			if data[p] == 46 {
				goto tr77
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr83
			}
			goto tr1
		case 57:
			if data[p] == 46 {
				goto tr77
			}
			goto tr1
		case 58:
			if data[p] == 46 {
				goto tr74
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr84
			}
			goto tr1
		case 59:
			if data[p] == 46 {
				goto tr74
			}
			goto tr1
		case 60:
			if data[p] == 46 {
				goto tr71
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr85
			}
			goto tr1
		case 61:
			if data[p] == 46 {
				goto tr71
			}
			goto tr1
		case 62:
			if data[p] == 32 {
				goto tr68
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr86
			}
			goto tr1
		case 63:
			if data[p] == 32 {
				goto tr68
			}
			goto tr1
		case 64:
			if data[p] == 46 {
				goto tr65
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr87
			}
			goto tr1
		case 65:
			if data[p] == 46 {
				goto tr65
			}
			goto tr1
		case 66:
			if data[p] == 46 {
				goto tr62
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr88
			}
			goto tr1
		case 67:
			if data[p] == 46 {
				goto tr62
			}
			goto tr1
		case 68:
			if data[p] == 46 {
				goto tr59
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr89
			}
			goto tr1
		case 69:
			if data[p] == 46 {
				goto tr59
			}
			goto tr1
		case 70:
			if data[p] == 110 {
				goto tr90
			}
			goto tr1
		case 71:
			if data[p] == 121 {
				goto tr91
			}
			goto tr1
		case 649:
			if data[p] == 32 {
				goto tr682
			}
			goto tr1
		case 72:
			if data[p] == 111 {
				goto tr92
			}
			goto tr1
		case 73:
			if data[p] == 115 {
				goto tr93
			}
			goto tr1
		case 74:
			if data[p] == 116 {
				goto tr94
			}
			goto tr1
		case 75:
			if data[p] == 32 {
				goto tr95
			}
			goto tr1
		case 76:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr96
			}
			goto tr1
		case 77:
			if data[p] == 46 {
				goto tr97
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr98
			}
			goto tr1
		case 78:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr99
			}
			goto tr1
		case 79:
			if data[p] == 46 {
				goto tr100
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr101
			}
			goto tr1
		case 80:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr102
			}
			goto tr1
		case 81:
			if data[p] == 46 {
				goto tr103
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr104
			}
			goto tr1
		case 82:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr105
			}
			goto tr1
		case 650:
			if data[p] == 32 {
				goto tr682
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr683
			}
			goto tr1
		case 651:
			if data[p] == 32 {
				goto tr682
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr91
			}
			goto tr1
		case 83:
			if data[p] == 46 {
				goto tr103
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr106
			}
			goto tr1
		case 84:
			if data[p] == 46 {
				goto tr103
			}
			goto tr1
		case 85:
			if data[p] == 46 {
				goto tr100
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr107
			}
			goto tr1
		case 86:
			if data[p] == 46 {
				goto tr100
			}
			goto tr1
		case 87:
			if data[p] == 46 {
				goto tr97
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr108
			}
			goto tr1
		case 88:
			if data[p] == 46 {
				goto tr97
			}
			goto tr1
		case 89:
			if data[p] == 32 {
				goto tr54
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr109
			}
			goto tr1
		case 90:
			if data[p] == 32 {
				goto tr54
			}
			goto tr1
		case 91:
			if data[p] == 46 {
				goto tr51
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr110
			}
			goto tr1
		case 92:
			if data[p] == 46 {
				goto tr51
			}
			goto tr1
		case 93:
			if data[p] == 46 {
				goto tr48
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr111
			}
			goto tr1
		case 94:
			if data[p] == 46 {
				goto tr48
			}
			goto tr1
		case 95:
			if data[p] == 46 {
				goto tr45
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr112
			}
			goto tr1
		case 96:
			if data[p] == 46 {
				goto tr45
			}
			goto tr1
		case 97:
			if data[p] == 32 {
				goto tr42
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr113
			}
			goto tr1
		case 98:
			if data[p] == 32 {
				goto tr42
			}
			goto tr1
		case 99:
			if data[p] == 46 {
				goto tr39
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr114
			}
			goto tr1
		case 100:
			if data[p] == 46 {
				goto tr39
			}
			goto tr1
		case 101:
			if data[p] == 46 {
				goto tr36
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr115
			}
			goto tr1
		case 102:
			if data[p] == 46 {
				goto tr36
			}
			goto tr1
		case 103:
			if data[p] == 46 {
				goto tr33
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr116
			}
			goto tr1
		case 104:
			if data[p] == 46 {
				goto tr33
			}
			goto tr1
		case 105:
			if data[p] == 110 {
				goto tr117
			}
			goto tr1
		case 106:
			if data[p] == 121 {
				goto tr118
			}
			goto tr1
		case 107:
			if data[p] == 32 {
				goto tr119
			}
			goto tr1
		case 108:
			if data[p] == 111 {
				goto tr120
			}
			goto tr1
		case 109:
			if data[p] == 115 {
				goto tr121
			}
			goto tr1
		case 110:
			if data[p] == 116 {
				goto tr122
			}
			goto tr1
		case 111:
			if data[p] == 32 {
				goto tr123
			}
			goto tr1
		case 112:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr124
			}
			goto tr1
		case 113:
			if data[p] == 46 {
				goto tr125
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr126
			}
			goto tr1
		case 114:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr127
			}
			goto tr1
		case 115:
			if data[p] == 46 {
				goto tr128
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr129
			}
			goto tr1
		case 116:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr130
			}
			goto tr1
		case 117:
			if data[p] == 46 {
				goto tr131
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr132
			}
			goto tr1
		case 118:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr133
			}
			goto tr1
		case 119:
			if data[p] == 32 {
				goto tr119
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr134
			}
			goto tr1
		case 120:
			if data[p] == 32 {
				goto tr119
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr118
			}
			goto tr1
		case 121:
			if data[p] == 46 {
				goto tr131
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr135
			}
			goto tr1
		case 122:
			if data[p] == 46 {
				goto tr131
			}
			goto tr1
		case 123:
			if data[p] == 46 {
				goto tr128
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr136
			}
			goto tr1
		case 124:
			if data[p] == 46 {
				goto tr128
			}
			goto tr1
		case 125:
			if data[p] == 46 {
				goto tr125
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr137
			}
			goto tr1
		case 126:
			if data[p] == 46 {
				goto tr125
			}
			goto tr1
		case 127:
			switch data[p] {
			case 32:
				goto tr28
			case 99:
				goto tr138
			case 103:
				goto tr139
			}
			switch {
			case data[p] > 57:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr29
				}
			case data[p] >= 48:
				goto tr29
			}
			goto tr1
		case 128:
			switch data[p] {
			case 32:
				goto tr28
			case 109:
				goto tr140
			}
			switch {
			case data[p] > 57:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr29
				}
			case data[p] >= 48:
				goto tr29
			}
			goto tr1
		case 129:
			switch data[p] {
			case 32:
				goto tr28
			case 112:
				goto tr141
			}
			switch {
			case data[p] > 57:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr29
				}
			case data[p] >= 48:
				goto tr29
			}
			goto tr1
		case 130:
			if data[p] == 32 {
				goto tr142
			}
			switch {
			case data[p] > 57:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr29
				}
			case data[p] >= 48:
				goto tr29
			}
			goto tr1
		case 131:
			switch data[p] {
			case 97:
				goto tr144
			case 104:
				goto tr145
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr143
			}
			goto tr1
		case 132:
			if data[p] == 46 {
				goto tr146
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr147
			}
			goto tr1
		case 133:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr148
			}
			goto tr1
		case 134:
			if data[p] == 46 {
				goto tr149
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr150
			}
			goto tr1
		case 135:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr151
			}
			goto tr1
		case 136:
			if data[p] == 46 {
				goto tr152
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr153
			}
			goto tr1
		case 137:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr154
			}
			goto tr1
		case 138:
			if data[p] == 32 {
				goto tr155
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr156
			}
			goto tr1
		case 139:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr157
			}
			goto tr1
		case 140:
			if data[p] == 46 {
				goto tr158
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr159
			}
			goto tr1
		case 141:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr160
			}
			goto tr1
		case 142:
			if data[p] == 46 {
				goto tr161
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr162
			}
			goto tr1
		case 143:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr163
			}
			goto tr1
		case 144:
			if data[p] == 46 {
				goto tr164
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr165
			}
			goto tr1
		case 145:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr166
			}
			goto tr1
		case 146:
			if data[p] == 32 {
				goto tr167
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr168
			}
			goto tr1
		case 147:
			switch data[p] {
			case 97:
				goto tr170
			case 104:
				goto tr171
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr169
			}
			goto tr1
		case 148:
			if data[p] == 46 {
				goto tr172
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr173
			}
			goto tr1
		case 149:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr174
			}
			goto tr1
		case 150:
			if data[p] == 46 {
				goto tr175
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr176
			}
			goto tr1
		case 151:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr177
			}
			goto tr1
		case 152:
			if data[p] == 46 {
				goto tr178
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr179
			}
			goto tr1
		case 153:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr180
			}
			goto tr1
		case 154:
			if data[p] == 32 {
				goto tr181
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr182
			}
			goto tr1
		case 155:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr183
			}
			goto tr1
		case 156:
			if data[p] == 46 {
				goto tr184
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr185
			}
			goto tr1
		case 157:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr186
			}
			goto tr1
		case 158:
			if data[p] == 46 {
				goto tr187
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr188
			}
			goto tr1
		case 159:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr189
			}
			goto tr1
		case 160:
			if data[p] == 46 {
				goto tr190
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr191
			}
			goto tr1
		case 161:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr192
			}
			goto tr1
		case 652:
			if data[p] == 32 {
				goto tr684
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr685
			}
			goto tr1
		case 162:
			if data[p] == 108 {
				goto tr195
			}
			switch {
			case data[p] > 57:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr194
				}
			case data[p] >= 48:
				goto tr193
			}
			goto tr1
		case 653:
			if data[p] == 32 {
				goto tr686
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr687
			}
			goto tr1
		case 163:
			if data[p] == 108 {
				goto tr80
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr196
			}
			goto tr1
		case 654:
			if data[p] == 32 {
				goto tr688
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr689
			}
			goto tr1
		case 164:
			if data[p] == 45 {
				goto tr197
			}
			if 97 <= data[p] && data[p] <= 122 {
				goto tr198
			}
			goto tr1
		case 165:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr199
			}
			goto tr1
		case 655:
			if data[p] == 32 {
				goto tr690
			}
			if 97 <= data[p] && data[p] <= 122 {
				goto tr199
			}
			goto tr1
		case 166:
			switch data[p] {
			case 45:
				goto tr197
			case 111:
				goto tr200
			}
			if 97 <= data[p] && data[p] <= 122 {
				goto tr198
			}
			goto tr1
		case 167:
			switch data[p] {
			case 45:
				goto tr197
			case 103:
				goto tr201
			}
			if 97 <= data[p] && data[p] <= 122 {
				goto tr198
			}
			goto tr1
		case 656:
			if data[p] == 45 {
				goto tr197
			}
			if 97 <= data[p] && data[p] <= 122 {
				goto tr198
			}
			goto tr1
		case 657:
			if data[p] == 32 {
				goto tr684
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr691
			}
			goto tr1
		case 658:
			if data[p] == 32 {
				goto tr684
			}
			goto tr1
		case 168:
			if data[p] == 46 {
				goto tr190
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr202
			}
			goto tr1
		case 169:
			if data[p] == 46 {
				goto tr190
			}
			goto tr1
		case 170:
			if data[p] == 46 {
				goto tr187
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr203
			}
			goto tr1
		case 171:
			if data[p] == 46 {
				goto tr187
			}
			goto tr1
		case 172:
			if data[p] == 46 {
				goto tr184
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr204
			}
			goto tr1
		case 173:
			if data[p] == 46 {
				goto tr184
			}
			goto tr1
		case 174:
			if data[p] == 32 {
				goto tr181
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr205
			}
			goto tr1
		case 175:
			if data[p] == 32 {
				goto tr181
			}
			goto tr1
		case 176:
			if data[p] == 46 {
				goto tr178
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr206
			}
			goto tr1
		case 177:
			if data[p] == 46 {
				goto tr178
			}
			goto tr1
		case 178:
			if data[p] == 46 {
				goto tr175
			}
			if 48 <= data[p] && data[p] <= 57 {
				goto tr207
			}
			goto tr1
		case 179:
